# sea-orm-bakery-demo

./: Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20240721_000001_create_bakery_table.rs  m20240721_000002_create_chef_table.rs  main.rs
src/: main.rs
