[package]
name = "sea-orm-bakery-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
# Features here: https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime/#extra-features
sea-orm = { version = "^0.12.0", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
